# binance-sbe-rust-sample-app

./: 1. Binance Spot SBE 三套 Schema 详解.md  2. 对比不同 sbe parser.md  3. spot_3_3 vs spot-fixsbe-1_1 对比详解.md  4. bk字段释义 json和sbe一致性.md  Cargo.toml  Generating Ed25519 keys.md  README.md
bookticker-benchmark/: Cargo.toml  README.md
bookticker-benchmark/src/: main.rs
bookticker-benchmark/src/nautilus_sbe/: cursor.rs  error.rs
bookticker-benchmark/src/nautilus_sbe/stream/: best_bid_ask.rs  mod.rs
sbe-bookticker-app/: Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md
sbe-bookticker-app/src/: main.rs
sbe-bookticker-app/src/nautilus_sbe/: cursor.rs  error.rs  mod.rs
sbe-bookticker-app/src/nautilus_sbe/stream/: best_bid_ask.rs  mod.rs
sbe-sample-app/: PROJECT_OVERVIEW_ZH.md
sbe-sample-app/src/: exchange_info.rs  main.rs  rate_limit.rs
spot_sbe/src/: account_allocations_response_codec.rs  account_commission_response_codec.rs  account_order_rate_limit_response_codec.rs  allocation_type.rs  book_ticker_symbol_response_codec.rs  cancel_order_list_response_codec.rs  error_response_codec.rs  event_stream_terminated_event_codec.rs  exchange_max_num_order_lists_filter_codec.rs  external_lock_update_event_codec.rs  group_size_16_encoding_codec.rs  lib.rs  lot_size_filter_codec.rs  max_asset_filter_codec.rs  max_num_order_lists_filter_codec.rs  message_data_16_codec.rs  message_data_8_codec.rs  my_filters_response_codec.rs  new_order_list_ack_response_codec.rs  new_order_list_full_response_codec.rs  order_types.rs  (+25 more)
spot_stream/: Cargo.toml
tools/: websocket_send.py
(+63 files in other folders)
