[package]
name = "bookticker-benchmark"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
publish = false

[dependencies]
anyhow = "1.0.102"
futures-util = { version = "0.3.32", features = ["sink"] }
serde_json = "1"
tokio = { version = "=1.32.0", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
tokio-tungstenite = { version = "=0.20.1", features = ["rustls-tls-webpki-roots"] }
url = "=2.4.1"
